# prueba-de-uso-de-rust

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  TESTING.md  bench_log.txt  pyproject.toml  run_tests.sh  test_output.txt  update_snapshot.ps1  verify_system.ps1
.github/workflows/: ci.yml  tests.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/assets/src/tests/: lib_tests.rs
crates/core/: Cargo.toml  schema_event_compiled.json  schema_script_raw.json
crates/core/benches/: core_benches.rs
crates/core/src/: assets.rs  audio.rs  bundle.rs  engine.rs  entity.rs  error.rs  event.rs  graph.rs  lib.rs  manifest.rs  render.rs  repro.rs  resource.rs  script.rs  security.rs  state.rs  storage.rs  timeline.rs  trace.rs  ui.rs  version.rs  visual.rs
crates/core/src/engine/: runtime.rs
crates/core/src/event/: branching.rs  choice.rs  dialogue.rs  mod.rs  python_bridge.rs  python_bridge_helpers.rs  scene.rs
crates/core/src/graph/: export.rs
crates/core/src/renpy_import/: flow.rs  mod.rs  syntax.rs  tests.rs  tests_profile_and_security.rs  types.rs
crates/core/src/script/: compiled.rs  mod.rs  raw.rs
crates/core/src/tests/: engine_tests.rs  graph_tests.rs  storage_tests.rs
crates/core/tests/: engine_tests.rs  ext_api_tests.rs  fuzz_tests.rs  python_bindings.rs  resource_tests.rs  save_slot_store_tests.rs  schema_tests.rs  snapshot_tests.rs  snapshot_tests_patch.rs  ui_tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  assets.rs  lib.rs  persist.rs  widgets.rs
crates/gui/src/editor/: asset_browser.rs  compiler.rs  diagnostics.rs  diff_dialog.rs  execution_contract.rs  graph_panel.rs  inspector_panel.rs  inspector_panel_node_editor.rs  inspector_panel_node_sections.rs  lint_checks.rs  lint_panel.rs  menu_bar.rs  mod.rs  node_editor.rs  node_graph.rs  node_rendering.rs  node_types.rs  player_ui.rs  project_io.rs  quick_fix.rs  script_sync.rs  timeline_panel.rs  validator.rs  viewport_panel.rs  visual_composer.rs  workbench.rs
crates/gui/src/editor/compiler/parity/: repro.rs  route_sim.rs
crates/gui/src/editor/node_editor/: render.rs
crates/gui/src/editor/node_graph/: layout.rs  mutations.rs  navigation.rs  view.rs
crates/gui/src/editor/player_ui/: content.rs  controls.rs  render.rs
crates/gui/src/editor/quick_fix/: catalog.rs
crates/gui/src/editor/tests/: compiler_tests.rs  node_editor_tests.rs  node_graph_tests.rs  player_ui_tests.rs  validator_tests.rs  workbench_tests.rs
crates/gui/src/editor/tests/workbench/: core_tests.rs  preview_and_project_tests.rs
crates/gui/src/editor/validator/: context.rs  helpers.rs  rules.rs
crates/gui/src/editor/workbench/: compile_ops.rs  composer_ops.rs  player_audio_path.rs  player_mode_ops.rs  project_ops.rs  report_ops.rs  ui.rs
crates/gui/tests/: config_tests.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
crates/py/src/bindings/: audio.rs  builder.rs  conversion.rs  editor.rs  engine.rs  graph.rs  mod.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: audio.rs  lib.rs  loader.rs
crates/runtime/src/render/: hardware.rs  software.rs
crates/runtime/tests/: audio_contract_tests.rs  audio_sync_tests.rs
examples/: gui_demo.rs
examples/imported_the_question/: import_report.json
examples/imported_the_question_after_full/: import_report.json  main.json
examples/imported_the_question_after_story/: import_report.json  project.vnm
examples/imported_the_question_baseline_story/: import_report.json  main.json
examples/imported_the_question_custom_no_tl/: import_report.json  main.json
examples/imported_the_question_custom_storylike/: import_report.json  main.json
examples/imported_the_question_from_game_story/: import_report.json  project.vnm
examples/imported_the_question_full_recheck/: main.json
examples/imported_the_question_new_full/: import_report.json  main.json
examples/imported_the_question_phase3_custom/: import_report.json  main.json
examples/imported_the_question_phase3_decorated/: import_report.json
examples/imported_the_question_phase3_story/: import_report.json  main.json
examples/imported_the_question_recheck/: import_report.json
examples/python/: basic_engine.py  gui_demo.py  node_graph_demo.py  scene_visuals.py  timeline_demo.py
examples/scripts/: demo_story.json  project.toml  script.json
python/vnengine/: __init__.py  app.py  builder.py  engine.py  types.py
src/: engine.rs  event.rs  lib.rs  resource.rs  security.rs  state.rs
tests/: engine_tests.rs  python_bindings.rs
tests/python/: test_examples.py  test_vnengine.py  test_vnengine_bindings.py
tools/cli/: Cargo.toml
