[package]
name = "visual_novel_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_engine"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
miette = { version = "7.2.0", features = ["fancy"] }

pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]

[dev-dependencies]
serde_json = "1.0"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
