[package]
name = "visual_novel_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_engine"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
miette = { version = "7.2.0", features = ["fancy"] }
tabled = "0.16"
tokei = "12.1"
bincode = "1.3"
crc32fast = "1.4"
sha2 = "0.10"

pyo3 = { version = "0.21", optional = true }
arbitrary = { version = "1.4.2", features = ["derive"], optional = true }

[features]
python = ["pyo3", "pyo3/extension-module"]
python-embed = ["pyo3", "pyo3/auto-initialize"]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
serde_json = "1.0"
pyo3 = { version = "0.21", default-features = false, features = ["auto-initialize"] }
criterion = "0.5"
insta = { version = "1.41", features = ["yaml"] }
arbitrary = { version = "1.4.2", features = ["derive"] }

[[bench]]
name = "core_benches"
harness = false
