[package]
name = "visual_novel_gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "visual_novel_gui"
crate-type = ["rlib"]

[dependencies]
visual_novel_engine = { path = "../core" }
eframe = { version = "0.27" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
directories = "5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.14"
crc32fast = "1.4"

[dev-dependencies]
tempfile = "3.10"
