[package]
name = "visual_novel_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
visual_novel_engine = { path = "../core" }
vnengine_assets = { path = "../assets" }

egui = { version = "0.27", features = ["serde"] }
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.14" # File dialogs
directories = "5.0"
miette = { version = "7.0", features = ["fancy"] } # Nice error reporting
uuid = { version = "1.0", features = ["v4", "serde"] } # For unique IDs

# Optional dependencies for features
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true } 

[features]
default = []
translation = ["dep:reqwest"] # Feature flag for automatic translation

[dev-dependencies]
tempfile = "3.10"
